Generating reports for sold books

--- a/web/css/eBooksStoreCSS.css
+++ b/web/css/eBooksStoreCSS.css
@@ -1,9 +1,6 @@
-/*
-Copyright gheorgheaurelpacurar
-*/
 /* 
-    Author     : gheorgheaurelpacurar
-    Copyright  : gheorgheaurelpacurar
+    Author: MariusNeagu
+    
 */
 body {
     background:url(../img/eBooksStoreBackground.jpg);
